[gd_scene load_steps=10 format=3 uid="uid://bbexogurjnr2k"]

[ext_resource type="Script" path="res://Bat.gd" id="1_4re30"]
[ext_resource type="Texture2D" uid="uid://ed54lppqi2iq" path="res://Bat_Sprites.png" id="2_w3vnd"]

[sub_resource type="Animation" id="Animation_yg8li"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_pm21o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ta56k"]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_wmudr"]
resource_name = "Die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qqpik"]
_data = {
"Attack": SubResource("Animation_yg8li"),
"Die": SubResource("Animation_wmudr"),
"Idle": SubResource("Animation_ta56k"),
"RESET": SubResource("Animation_pm21o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2buif"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m8cja"]
radius = 204.002

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_4re30")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_w3vnd")
hframes = 5
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qqpik")
}

[node name="AttackArea" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
rotation = 1.36834
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_2buif")

[node name="BatAttack" type="Area2D" parent="."]

[node name="AttackArea" type="CollisionShape2D" parent="BatAttack"]
position = Vector2(0, -9)
rotation = 1.36834
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_2buif")

[node name="BatDetect" type="Area2D" parent="."]

[node name="ChaseArea" type="CollisionShape2D" parent="BatDetect"]
shape = SubResource("CircleShape2D_m8cja")

[connection signal="body_entered" from="BatAttack" to="." method="_on_bat_attack_body_entered"]
[connection signal="body_exited" from="BatAttack" to="." method="_on_bat_attack_body_exited"]
[connection signal="body_entered" from="BatDetect" to="." method="_on_bat_detect_body_entered"]
[connection signal="body_exited" from="BatDetect" to="." method="_on_bat_detect_body_exited"]
